Add jdk.incubator.vector module to build instructions.